--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -3,6 +3,7 @@
     display: flex;
     margin: 1.5em;
     align-items: flex-end;
+    margin: 1em;
 }
 
 .contain{
@@ -26,7 +27,12 @@
     height: 3em;
     border: none;
     border-radius: 5px;
-    background-color: #1d1d1d;
+    background-color: red;
     color: #ffffff;
     margin: 0.5em;
+    transition: 0.7s;
+}
+
+.button:hover{
+    color: #1d1d1d;
 }
