--- a/Client/src/components/CardsContainer/CardsContainer.module.css
+++ b/Client/src/components/CardsContainer/CardsContainer.module.css
@@ -2,9 +2,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    width: 97vw;
+    max-width: 100vw;
 }
 
 .card{
     display: flex;
+    background-color: #101010;
+    margin:2em
 }
