--- a/Client/src/components/FilteredCards/FiteredCards.module.css
+++ b/Client/src/components/FilteredCards/FiteredCards.module.css
@@ -1,23 +1,26 @@
 .divContainer{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
     width: 100vw;
+    margin-bottom: em;
+    margin-top: 8em;
 }
 
 .selectDiv {
     display: flex;
     justify-content: space-evenly;
     width: 40vw;
-    height: 30px;
+    height: 40px;
     margin: 1em;
     padding: 1em;
-    margin-left: 0;
+    margin-left: 1em;
 }
 
 .select {
-    background-color: #1d1d1d;
-    color: aliceblue;
-    font-family: monospace;
-    border: none;
+    background-color: #fff;
+    color: #1d1d1d;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    border: 1px solid #101010;
+    border-radius: 5px;
 }
