--- a/Client/src/components/SearchBar/SearchBar.module.css
+++ b/Client/src/components/SearchBar/SearchBar.module.css
@@ -1,23 +1,19 @@
 .divContainer {
+    display: flex;
     font-family: inherit;
-    justify-content: center;
-    height: 3em;
-    margin-top: 0.5em;
-}
-
-.form {
-    height: 3em;
 }
 
 .input {
-    border: none;
+    border: 2px solid #1c1c1e;
+    border-radius: 20px;
+    text-align: center;
     height: 2em;
     width: 15em;
     background-color: transparent;
-    border-bottom: 2px solid #1d1d1d;
     color: #1d1d1d;
+    transition: 0.7s;
 }
 
-.input:focus {
-    outline: none;
+.input::placeholder{
+    color: #1c1c1e;
 }
