--- a/Client/src/views/Landing/Landing.module.css
+++ b/Client/src/views/Landing/Landing.module.css
@@ -1,37 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+
+
 .divContainer {
     font-family: monospace;
     padding: 0;
     margin: 0;
-    background-image: url('../../../public/Background.jpg');
+    /* background-image: url('../../../public/Background.jpg'); */
     background-size: cover;
     display: flex;
     justify-content: space-between;
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
     user-select: none;
+    background-color: #fff;
 }
 
-.title {
-    font-size: 0.7em;
-    color: #f0f8ff;
-    margin-left: 2em;
+.img{
+    width: 50vw;
+    height: 100vh;
 }
 
+.divButton{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50vw;
+    height: 100vh;
+    border-left: 1px solid #1d1d1d;
+}
+
+.h1{
+    font-family: 'Titan One', sans-serif;
+    font-size: 6em;
+    color: #252525;
+    align-self: center;
+}
+
+.h3{
+    font-family: 'Monoton', sans-serif;
+    align-self: center;
+    font-size: 2em;
+    color: #1d1d1d;
+    font-weight: 100;
+    
+}
+
+
+.link{
+    align-self: center;
+}
 
 .button {
-    color: #1d1d1d;
-    background-color: #f0f8ff;
+    color: #f0f8ff;
+    background-color: #1d1d1d;
     border: none;
     width: 10em;
     height: 3em;
     border-radius: 10em;
     cursor: pointer;
     font-weight: 100;
-    margin: 1em;
     transition: 0.7s;
+    margin: 4em;
 }
 
 .button:hover{
-    color: #f0f8ff;
-    background-color: #1d1d1d;
+    color: #1d1d1d;
+    background-color: #f47e26;
 }
