--- a/Client/src/main.css
+++ b/Client/src/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: #fff;
-    overflow-x: hidden;
+    background: #fafafa;
     user-select: none;
+    overflow: hidden;
 }
