--- a/Client/src/components/Card/Card.module.css
+++ b/Client/src/components/Card/Card.module.css
@@ -1,38 +1,14 @@
-.divContainer {
-    font-family: sans-serif;
-    display: flex;
-    margin: 1.5em;
-    align-items: flex-end;
+.img{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    filter: blur(2px);
+    transition: 1s;
     margin: 1em;
 }
 
-.contain{
-    display: flex;
-    position: absolute;
-    align-items: center;
-    justify-content: flex-end;
-    align-items: flex-end;
-    width: 300px;
-    height: 300px;
-}
-
-.img {
-    width: 300px;
-    height: 300px;
-}
-
-.button {
-    cursor: pointer;
-    width: 8em;
-    height: 3em;
-    border: none;
-    border-radius: 5px;
-    background-color: red;
-    color: #ffffff;
-    margin: 0.5em;
-    transition: 0.7s;
-}
-
-.button:hover{
-    color: #1d1d1d;
+.img:hover{
+    filter: none;
+    width: 400px;
+    height: 400px;
 }
