--- a/Client/src/components/CardsContainer/CardsContainer.module.css
+++ b/Client/src/components/CardsContainer/CardsContainer.module.css
@@ -1,12 +1,7 @@
-.divContainer{
+.slider{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    max-width: 100vw;
-}
-
-.card{
-    display: flex;
-    background-color: #101010;
-    margin:2em
-}
+    justify-content: center;
+    align-items: center;
+    /* background-color: black; */
+    height: 70vh;
+  }
