--- a/Client/src/components/Paginated/Paginated.module.css
+++ b/Client/src/components/Paginated/Paginated.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+
 .divContainer {
     display: flex;
     width: 100vw;
@@ -16,4 +18,5 @@
     border: none;
     border-radius: 0.2em;
     background-color:#ffff;
+    font-family: 'Lilita One', sans-serif;
 }
