--- a/Client/src/views/Detail/Detail.module.css
+++ b/Client/src/views/Detail/Detail.module.css
@@ -1,46 +1,63 @@
-.divContainer {
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+
+
+.container{
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Lilita One', sans-serif;
+    margin-top: 1em;
 }
 
 .divImg{
-    height: 80vh;
-    width: 36vw;
-    margin-left: 3em;
+    margin-left: 1em;
 }
 
-.img {
-    position: relative;
-    padding-top: 5em;
-    width: 400px;
-    height: 400px;
+.img{
+    height: 75vh;
+    width: 30vw;
 }
 
-.info {
+.info{
     display: flex;
     flex-direction: column;
-    line-height: 1;
-    padding-top: 3em;
-    margin-left: 2em;
-    color: #1d1d1d;
-    float: left;
-    width: 30em;
-}
-
-.description {
-    display: flex;
-    flex-direction: column;
-    align-self: flex-start;
-    max-width: 400px;
-    margin-top: 3.5em;
+    background-color: rgb(240, 240, 240);
+    margin-right: 1em;
+    margin-left: 1em;
+    width: 100%;
 }
 
 .h1{
+    text-align: center;
     font-size: 3em;
 }
 
-.h2{
-    font-size: 1.9em;
+.description{
+    display: flex;
+    /* background-color: beige; */
+    justify-content: space-evenly;
+}
+
+.des:hover{
+    text-decoration: underline;
+    color: #f47e26;
+}
+
+.button{
+    font-family: 'Lilita One', sans-serif;
+    height: 2em;
+    font-weight: 700;
+    font-size: 1.2em;
+    border: none;
+    background-color: transparent;
+}
+
+.button:hover{
+    cursor: pointer;
+    border-bottom: 1px solid #f47e26;
+}
+
+.show{
+    font-size: 1.3em;
+    margin-left: 2em;
+    margin-right: 0.5em;
+    margin-top: 1em;
 }
