--- a/Client/src/views/Home/Home.module.css
+++ b/Client/src/views/Home/Home.module.css
@@ -1,18 +1,4 @@
-.h1{
-    font-size: 8em;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 0;
-    margin-top: 0.8em;
-    margin-left: 0.3em;
-    color: #101010;
-}
-
-.h2{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2.5em;
-    font-weight: 100;
-    color: #101010;
-    margin: 0;
-    margin-top: 0.2em;
-    margin-left: 1em;
+.divContainer{
+    display: flex;
+    flex-direction: column;
 }
