--- a/Client/src/components/CardsContainer/CardsContainer.module.css
+++ b/Client/src/components/CardsContainer/CardsContainer.module.css
@@ -13,11 +13,13 @@
 .filter{
   display: flex;
   flex-direction: column;
-  margin-left: 0.5em;
+  margin-left: 1em;
+  margin-top: 3em;
 }
 
 .order{
-  margin-right: 0.5em;
+  margin-right: 1em;
+  margin-top: 3em;
 }
 
 .slider{
@@ -30,7 +32,7 @@
 
   .h1{
     font-family: 'Lilita One', sans-serif;
-    color: #f47e26;
+    color: #ec0a12;
     font-size: 1em;
     text-align: center;
   }
