--- a/Client/src/components/NavBar/NavBar.module.css
+++ b/Client/src/components/NavBar/NavBar.module.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
 
 .divContainer{
     display: flex;
     width: 100vw;
     height: 15vh;
     margin-top: 1em;
-    font-family: 'Lilita One', sans-serif;
+    align-items: center;
 }
 
 .divLogo{
@@ -16,7 +18,8 @@
 .logo{
     filter: grayscale(100%);
     width: 70px;
-    padding-left: 1em;
+    height: 20px;
+    padding-left: 2em;
 }
 
 .links{
@@ -31,10 +34,14 @@
     display: flex;
     justify-content: space-around;
     margin-top: 1em;
+    font-family: 'PT Sans', sans-serif;
 }
 
 .h1{
     line-height: 0;
+    font-size: 1.8em;
+    font-family: 'Lilita One', sans-serif;
+    color: #1d1d1d;
 }
 
 .link{
