--- a/Client/src/components/Order/Order.module.css
+++ b/Client/src/components/Order/Order.module.css
@@ -1,12 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap');
 
-.select {
-    height: 2.5em;
-    width: 8em;
-    background-color: #1d1d1d;
-    color: #fff;
-    font-family: 'Lilita One', sans-serif;
-    border: 1px solid #101010;
-    border-radius: 2px;
+.ordered{
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 100;
+    cursor: pointer;
+    line-height: 2em;
     margin: 0.5em;
+    text-align: end;
+}
+
+.ordered:hover{
+    text-decoration-line: underline;
 }
