--- a/Client/src/views/About/About.module.css
+++ b/Client/src/views/About/About.module.css
@@ -6,14 +6,14 @@
 }
 
 .logo{
-  width: 4.8em;
-    height: 4.8em;
+  width: 9.8em;
+    height: 9.8em;
     border-radius: 15px;
 }
 
 .card {
-    width: 17em;
-    height: 22.5em;
+    width: 22em;
+    height: 27.5em;
     background: #171717;
     transition: 1s ease-in-out;
     clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
@@ -42,8 +42,8 @@
   }
   
   .card .img {
-    width: 4.8em;
-    height: 4.8em;
+    width: 9.8em;
+    height: 9.8em;
     background: white;
     border-radius: 15px;
     margin: auto;
@@ -62,7 +62,7 @@
   }
   
   .card a:hover {
-    color: #f47e26;
+    color: #ec0a12;
   }
   
   .card .button {
@@ -78,7 +78,7 @@
   }
   
   .card .button:hover {
-    background: #f47e26;
+    background: #ec0a12;
     color: white;
     cursor: pointer;
   }
