--- a/Client/src/views/Detail/Detail.module.css
+++ b/Client/src/views/Detail/Detail.module.css
@@ -36,10 +36,6 @@
     justify-content: space-evenly;
 }
 
-.des:hover{
-    text-decoration: underline;
-    color: #f47e26;
-}
 
 .button{
     font-family: 'Signika', sans-serif;
@@ -52,7 +48,7 @@
 
 .button:hover{
     cursor: pointer;
-    border-bottom: 1px solid #f47e26;
+    border-bottom: 1px solid #ec0a12;
 }
 
 .show{
